--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ matrix:
           env: DEPENDENCIES=low
 
 install:
-    - if [[ "$DEPENDENCIES" = 'high' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS; fi
-    - if [[ "$DEPENDENCIES" = 'low' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest; fi
+    - if [[ "$DEPENDENCIES" = 'high' ]]; then COMPOSER_MEMORY_LIMIT=2G travis_retry composer update $DEFAULT_COMPOSER_FLAGS; fi
+    - if [[ "$DEPENDENCIES" = 'low' ]]; then COMPOSER_MEMORY_LIMIT=2G travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest; fi
 
 cache:
     directories:
